--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="home_title">Apiaries</string>
     <string name="home">Home</string>
     <string name="stats">Stats</string>
-    <string name="to_do">To-Do</string>
+    <string name="to_do">To-Do List</string>
     <string name="settings">Settings</string>
     <string name="error_unknown">An unknown error occurred.</string>
     <string name="error_with_message">Error: %1$s</string>
@@ -195,7 +195,7 @@
 
     <string name="title_add_inspection">Add New Inspection</string>
     <string name="title_edit_inspection">Edit Inspection</string>
-    <string name="title_inspections_for_hive">Inspections for Hive #%1$s</string>
+    <string name="title_inspections_for_hive">Inspections</string>
     <string name="title_delete_inspection">Delete Inspection</string>
     <string name="title_frames">Frames</string>
     <string name="title_detailed_frames">Detailed Frame Counts</string>
@@ -489,5 +489,15 @@ If you have screenshots, logs, or other files that help illustrate your point, f
         <item quantity="one">%d day after grafting</item>
         <item quantity="other">%d days after grafting</item>
     </plurals>
+
+    <string name="header_overdue">Overdue</string>
+    <string name="header_today">Today</string>
+    <string name="header_upcoming">Upcoming</string>
+    <string name="header_no_due_date">No Due Date</string>
+    <string name="header_completed">Completed (%d)</string>
+
+    <!-- Line DataSet Labels (cumulative yields) -->
+    <string name="chart_cumulative_emergence">Cumulative Emergence</string>
+    <string name="chart_cumulative_mating">Cumulative Mating</string>
 
 </resources>
